--- a/src/scss/components/_screencontroller.scss
+++ b/src/scss/components/_screencontroller.scss
@@ -1,14 +1,188 @@
-.screencontroller {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  & > * {
-    flex-grow: 2;
-    background: color(black, base);
+$screen-background: black;
+
+.videoplayer {
+  background: transparent linear-gradient(to bottom, #85908c 0%, #323431 100%)
+    repeat scroll 0 0;
+  background-size: cover;
+  overflow: hidden;
+  position: relative;
+
+  &__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: $screen-background;
+  }
+
+  &__video {
+    video {
+      filter: blur(1px);
+    }
+  }
+  &__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+  }
+
+  &__canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+  }
+}
+
+.videoeffect {
+  visibility: visible;
+
+  &--wobble {
+    animation: wobbley 100ms infinite;
+  }
+
+  &--scanlines {
+    z-index: 9999;
+    background: linear-gradient(
+        transparentize($screen-background, 1) 50%,
+        transparentize(darken($screen-background, 10), 0.75) 50%
+      ),
+      linear-gradient(
+        90deg,
+        transparentize(#ff0000, 0.94),
+        transparentize(#00ff00, 0.98),
+        transparentize(#0000ff, 0.94)
+      );
+    background-size: 100% 2px, 8px 100%;
+    pointer-events: none;
+  }
+
+  &--snow {
+    @extend .videoeffect;
+    background-color: #aaa;
+    opacity: 0.2;
+  }
+
+  &--vignette {
+    background-image: url(/assets/assets/images/border.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    z-index: 2;
+    border: 10px solid black;
+    width: calc(100% - 20px);
+    height: calc(100% - 20px);
+  }
+
+  &--vcr {
+    opacity: 0.2;
+  }
+}
+
+.glitch {
+  animation: 5s ease 2000ms normal none infinite running glitch;
+}
+
+@keyframes wobbley {
+  0% {
+    transform: translateY(1px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes glitch {
+  30% {
+  }
+  40% {
+    opacity: 1;
+    transform: scale(1, 1);
+    transform: skew(0, 0);
+  }
+  41% {
+    opacity: 0.8;
+    transform: scale(1, 1.2);
+    transform: skew(80deg, 0);
+  }
+  42% {
+    opacity: 0.8;
+    transform: scale(1, 1.2);
+    transform: skew(-50deg, 0);
+  }
+  43% {
+    opacity: 1;
+    transform: scale(1, 1);
+    transform: skew(0, 0);
+  }
+  65% {
+  }
+}
+
+.overlay .text {
+  animation: 5s ease 2000ms normal none infinite running glitch;
+}
+
+.on > .screen-wrapper {
+  animation: 3000ms linear 0ms normal forwards 1 running on;
+}
+.off > .screen-wrapper {
+  animation: 750ms cubic-bezier(0.23, 1, 0.32, 1) 0ms normal forwards 1 running
+    off;
+}
+
+@keyframes on {
+  0% {
+    transform: scale(1, 0.8) translate3d(0, 0, 0);
+    filter: brightness(4);
+    opacity: 1;
+  }
+  3.5% {
+    transform: scale(1, 0.8) translate3d(0, 100%, 0);
+  }
+
+  3.6% {
+    transform: scale(1, 0.8) translate3d(0, -100%, 0);
+    opacity: 1;
+  }
+
+  9% {
+    transform: scale(1.3, 0.6) translate3d(0, 100%, 0);
+    filter: brightness(4);
+    opacity: 0;
+  }
+
+  11% {
+    transform: scale(1, 1) translate3d(0, 0, 0);
+    filter: contrast(0) brightness(0);
+    opacity: 0;
+  }
+
+  100% {
+    transform: scale(1, 1) translate3d(0, 0, 0);
+    filter: contrast(1) brightness(1.2) saturate(1.3);
+    opacity: 1;
+  }
+}
+
+@keyframes off {
+  0% {
+    transform: scale(1, 1);
+    filter: brightness(1);
+  }
+  40% {
+    transform: scale(1, 0.005);
+    filter: brightness(100);
+  }
+  70% {
+    transform: scale(1, 0.005);
+  }
+  90% {
+    transform: scale(0.005, 0.005);
+  }
+  100% {
+    transform: scale(0, 0);
   }
 }
