--- a/src/scss/components/_screencontroller.scss
+++ b/src/scss/components/_screencontroller.scss
@@ -1,33 +1,47 @@
 $screen-background: black;
 
 .videoplayer {
+  overflow: hidden;
+  position: relative;
+  aspect-ratio: 4/3;
+  height: 80vh;
+
   background: transparent linear-gradient(to bottom, #85908c 0%, #323431 100%)
     repeat scroll 0 0;
   background-size: cover;
-  overflow: hidden;
-  position: relative;
+  animation: 750ms cubic-bezier(0.23, 1, 0.32, 1) 0ms reverse forwards infinite
+    paused offBlink;
 
   &__wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     background: $screen-background;
-  }
-
-  &__video {
-    video {
-      filter: blur(1px);
-    }
-  }
-  &__overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 2;
   }
 
+  &__video {
+    width: 100%;
+    height: 100%;
+    video {
+      filter: blur(1px);
+      display: none;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center center;
+
+      &[active="true"] {
+        display: block;
+      }
+    }
+  }
+
+  &__overlay,
   &__canvas {
     position: absolute;
     top: 0;
@@ -35,6 +49,25 @@ $screen-background: black;
     width: 100%;
     height: 100%;
     z-index: 2;
+  }
+
+  // states
+  &.on {
+    animation: 300ms cubic-bezier(0.23, 1, 0.32, 1) 0ms normal forwards 1 paused
+      onBlink;
+    animation-play-state: running;
+    // animation-direction: reverse;
+
+    video {
+      animation: 3000ms linear 700ms normal forwards 1 running on;
+    }
+  }
+
+  &.off {
+    animation: 750ms cubic-bezier(0.23, 1, 0.32, 1) 0ms reverse forwards 1
+      paused offBlink;
+    animation-play-state: running;
+    animation-direction: normal;
   }
 }
 
@@ -63,18 +96,15 @@ $screen-background: black;
 
   &--snow {
     @extend .videoeffect;
-    background-color: #aaa;
     opacity: 0.2;
   }
 
   &--vignette {
     background-image: url(/assets/assets/images/border.png);
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: cover;
     z-index: 2;
     border: 10px solid black;
-    width: calc(100% - 20px);
-    height: calc(100% - 20px);
   }
 
   &--vcr {
@@ -100,17 +130,20 @@ $screen-background: black;
   40% {
     opacity: 1;
     transform: scale(1, 1);
-    transform: skew(0, 0);
+    filter: brightness(1);
   }
   41% {
-    opacity: 0.8;
-    transform: scale(1, 1.2);
-    transform: skew(80deg, 0);
+    filter: brightness(4);
   }
   42% {
     opacity: 0.8;
     transform: scale(1, 1.2);
-    transform: skew(-50deg, 0);
+    filter: brightness(1);
+  }
+  42% {
+    opacity: 0.8;
+    transform: scale(1, 1.2);
+    transform: skew(-5deg, 0);
   }
   43% {
     opacity: 1;
@@ -121,66 +154,69 @@ $screen-background: black;
   }
 }
 
-.overlay .text {
-  animation: 5s ease 2000ms normal none infinite running glitch;
-}
-
-.on > .screen-wrapper {
-  animation: 3000ms linear 0ms normal forwards 1 running on;
-}
-.off > .screen-wrapper {
-  animation: 750ms cubic-bezier(0.23, 1, 0.32, 1) 0ms normal forwards 1 running
-    off;
-}
-
 @keyframes on {
   0% {
-    transform: scale(1, 0.8) translate3d(0, 0, 0);
-    filter: brightness(4);
-    opacity: 1;
+    transform: scale(1, 0.3) translate3d(0, 0, 0);
+    filter: brightness(4) blur(15px);
   }
-  3.5% {
+  5% {
     transform: scale(1, 0.8) translate3d(0, 100%, 0);
   }
 
-  3.6% {
-    transform: scale(1, 0.8) translate3d(0, -100%, 0);
-    opacity: 1;
+  6% {
+    transform: scale(1, 0.1) translate3d(0, -100%, 0);
   }
 
   9% {
     transform: scale(1.3, 0.6) translate3d(0, 100%, 0);
-    filter: brightness(4);
-    opacity: 0;
+    filter: brightness(40);
   }
 
   11% {
     transform: scale(1, 1) translate3d(0, 0, 0);
-    filter: contrast(0) brightness(0);
-    opacity: 0;
+    filter: brightness(1);
   }
 
   100% {
     transform: scale(1, 1) translate3d(0, 0, 0);
-    filter: contrast(1) brightness(1.2) saturate(1.3);
-    opacity: 1;
+    filter: brightness(1);
   }
 }
 
-@keyframes off {
+@keyframes onBlink {
+  0% {
+    transform: scale(0, 0);
+  }
+  40% {
+    transform: scale(0.2, 0.005);
+  }
+  60% {
+    transform: scale(1, 0.005);
+  }
+  70% {
+    transform: scale(1, 0.005);
+    filter: brightness(30);
+  }
+  100% {
+    transform: scale(1, 1);
+    filter: brightness(1);
+  }
+}
+
+@keyframes offBlink {
   0% {
     transform: scale(1, 1);
     filter: brightness(1);
   }
   40% {
     transform: scale(1, 0.005);
-    filter: brightness(100);
+    filter: brightness(30);
   }
-  70% {
+  60% {
     transform: scale(1, 0.005);
   }
-  90% {
-    transform: scale(0.005, 0.005);
+  70% {
+    transform: scale(0.2, 0.005);
   }
   100% {
     transform: scale(0, 0);
