--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,19 +38,19 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import "abstracts/generic/grid-flex";
 
 @import "base/typography";
-@import "base/flex";
+// @import "base/flex";
 @import "base/layout";
 
 // @import "elements/badge";
-@import "elements/media";
-@import "elements/buttons";
-@import "elements/icons";
+// @import "elements/media";
+// @import "elements/buttons";
+// @import "elements/icons";
 
-@import "components/header";
-@import "components/footer";
-@import "components/navigation";
-@import "components/form";
-@import "components/accordion";
-@import "components/lists";
-@import "components/card";
+// @import "components/header";
+// @import "components/footer";
+// @import "components/navigation";
+// @import "components/form";
+// @import "components/accordion";
+// @import "components/lists";
+// @import "components/card";
 @import "components/screencontroller";
