--- a/src/scss/abstracts/variables/typography.scss
+++ b/src/scss/abstracts/variables/typography.scss
@@ -1,11 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;&display=swap");
 
 $folder--fonts: "./assets/fonts/";
 
 // stylelint-disable value-keyword-case
 $font--main: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
   Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-$font--display: "SpaceGrotesk";
+$font--display: "SpaceGrotesk", -apple-system, BlinkMacSystemFont, "Segoe UI",
+  Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 // stylelint-enable value-keyword-case
 $font--code: monaco, consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font--pre: "Courier 10 Pitch", courier, monospace;
