--- a/src/scss/components/_screencontroller.scss
+++ b/src/scss/components/_screencontroller.scss
@@ -1,16 +1,24 @@
 $screen-background: black;
+$bezier: cubic-bezier(0.23, 1, 0.32, 1);
+// $bezier: linear;
+$rotate-value: 0;
 
 .videoplayer {
   overflow: hidden;
   position: relative;
   aspect-ratio: 4/3;
-  height: 80vh;
-
   background: transparent linear-gradient(to bottom, #85908c 0%, #323431 100%)
     repeat scroll 0 0;
   background-size: cover;
-  animation: 750ms cubic-bezier(0.23, 1, 0.32, 1) 0ms reverse forwards infinite
-    paused offBlink;
+
+  @include break("md", "max") {
+    max-width: 60%;
+    transform: rotateY(-2deg);
+  }
+  @include break("md", "min") {
+    animation: 750ms $bezier 0ms reverse forwards infinite paused offBlink;
+    height: 70vh;
+  }
 
   &__wrapper {
     display: flex;
@@ -22,21 +30,29 @@ $screen-background: black;
     left: 0;
     width: 100%;
     height: 100%;
+
+    @include break("md", "max") {
+      align-items: flex-end;
+      padding: $gutter--lg;
+      justify-content: flex-end;
+    }
   }
 
   &__video {
     width: 100%;
     height: 100%;
+
     video {
-      filter: blur(1px);
       display: none;
       width: 100%;
       height: 100%;
       object-fit: cover;
       object-position: center center;
+      animation: 3000ms linear 700ms normal forwards infinite paused on;
 
       &[active="true"] {
         display: block;
+        animation-play-state: running;
       }
     }
   }
@@ -51,32 +67,23 @@ $screen-background: black;
     z-index: 2;
   }
 
-  // states
-  &.on {
-    animation: 300ms cubic-bezier(0.23, 1, 0.32, 1) 0ms normal forwards 1 paused
-      onBlink;
-    animation-play-state: running;
-    // animation-direction: reverse;
-
-    video {
-      animation: 3000ms linear 700ms normal forwards 1 running on;
+  @include break("md", "min") {
+    // states
+    &.on {
+      animation: 300ms $bezier 0ms normal forwards 1 paused onBlink;
+      animation-play-state: running;
     }
-  }
 
-  &.off {
-    animation: 750ms cubic-bezier(0.23, 1, 0.32, 1) 0ms reverse forwards 1
-      paused offBlink;
-    animation-play-state: running;
-    animation-direction: normal;
+    &.off {
+      animation: 750ms $bezier 0ms reverse forwards 1 paused offBlink;
+      animation-play-state: running;
+      animation-direction: normal;
+    }
   }
 }
 
 .videoeffect {
   visibility: visible;
-
-  &--wobble {
-    animation: wobbley 100ms infinite;
-  }
 
   &--scanlines {
     z-index: 9999;
@@ -116,14 +123,6 @@ $screen-background: black;
   animation: 5s ease 2000ms normal none infinite running glitch;
 }
 
-@keyframes wobbley {
-  0% {
-    transform: translateY(1px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
 @keyframes glitch {
   30% {
   }
@@ -195,22 +194,18 @@ $screen-background: black;
   }
   70% {
     transform: scale(1, 0.005);
-    filter: brightness(30);
   }
   100% {
     transform: scale(1, 1);
-    filter: brightness(1);
   }
 }
 
 @keyframes offBlink {
   0% {
     transform: scale(1, 1);
-    filter: brightness(1);
   }
   40% {
     transform: scale(1, 0.005);
-    filter: brightness(30);
   }
   60% {
     transform: scale(1, 0.005);
