new stop; never stop stopping

--- a/src/scss/abstracts/variables/typography.scss
+++ b/src/scss/abstracts/variables/typography.scss
@@ -3,7 +3,7 @@ $folder--fonts: "./assets/fonts/";
 // stylelint-disable value-keyword-case
 $font--main: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
   Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-$font--display: "SpaceGrotesk", -apple-system, BlinkMacSystemFont, "Segoe UI",
+$font--display: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
   Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 // stylelint-enable value-keyword-case
 $font--code: monaco, consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
