--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,7 +47,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import "elements/icons";
 
 @import "components/header";
-// @import "components/footer";
+@import "components/footer";
 // @import "components/navigation";
 // @import "components/form";
 // @import "components/accordion";
