--- a/src/scss/components/_screencontroller.scss
+++ b/src/scss/components/_screencontroller.scss
@@ -3,22 +3,35 @@ $bezier: cubic-bezier(0.23, 1, 0.32, 1);
 // $bezier: linear;
 $rotate-value: 0;
 
+@mixin aspect-ratio($width, $height) {
+  position: relative;
+  &:before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: ($height / $width) * 100%;
+  }
+  > * {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .videoplayer {
   overflow: hidden;
   position: relative;
-  aspect-ratio: 4/3;
   background: transparent linear-gradient(to bottom, #85908c 0%, #323431 100%)
     repeat scroll 0 0;
   background-size: cover;
-
-  @include break("md", "max") {
-    max-width: 60%;
-    transform: rotateY(-2deg);
-  }
-  @include break("md", "min") {
-    animation: 750ms $bezier 0ms reverse forwards infinite paused offBlink;
-    height: 70vh;
-  }
+  width: 100%;
+  max-width: 70vw;
+  max-height: 70vh;
+  @include aspect-ratio(4, 3);
 
   &__wrapper {
     display: flex;
@@ -39,9 +52,6 @@ $rotate-value: 0;
   }
 
   &__video {
-    width: 100%;
-    height: 100%;
-
     video {
       display: none;
       width: 100%;
@@ -59,15 +69,10 @@ $rotate-value: 0;
 
   &__overlay,
   &__canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     z-index: 2;
   }
 
-  @include break("md", "min") {
+  // @include break("md", "min") {
     // states
     &.on {
       animation: 300ms $bezier 0ms normal forwards 1 paused onBlink;
@@ -79,7 +84,7 @@ $rotate-value: 0;
       animation-play-state: running;
       animation-direction: normal;
     }
-  }
+  // }
 }
 
 .videoeffect {
@@ -109,9 +114,11 @@ $rotate-value: 0;
   &--vignette {
     background-image: url(/assets/assets/images/border.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
     z-index: 2;
-    border: 10px solid black;
+    border: 10px solid $screen-background;
+    transform: scale(1.01);
+
   }
 
   &--vcr {
