--- a/assets/style.css
+++ b/assets/style.css
@@ -885,6 +885,10 @@ article p {
   margin-top: 2rem;
 }
 
+article ul li:before {
+  content: '> ';
+}
+
 article a {
   position: relative;
   color: inherit;
@@ -932,6 +936,10 @@ body {
 
 body:not(.js-loaded) * {
   transition: none;
+}
+
+main {
+  padding-bottom: 128px;
 }
 
 .button {
@@ -1083,7 +1091,6 @@ body:not(.js-loaded) * {
   width: 100%;
   height: 100%;
   text-decoration: none;
-  font-family: monospace;
   -webkit-text-decoration: uppercase;
           text-decoration: uppercase;
   justify-content: space-between;
@@ -1147,6 +1154,7 @@ body[footer-visible="true"] .footer {
     align-items: flex-end;
     padding: 2rem;
     justify-content: flex-end;
+    padding-bottom: 4rem;
   }
 }
 
