fix broken link

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -150,6 +150,7 @@ article {
     will-change: color;
     margin-right: 2px;
     display: inline-block;
+    cursor: pointer;
 
     &:before {
       content: "";
