--- a/assets/style.css
+++ b/assets/style.css
@@ -1167,7 +1167,7 @@ body[footer-visible="true"] .footer {
      object-fit: cover;
   -o-object-position: center center;
      object-position: center center;
-  animation: 3000ms linear 700ms normal forwards infinite paused on;
+  animation: 3000ms linear 2000ms normal forwards infinite paused on;
 }
 
 .videoplayer__video video[active="true"] {
@@ -1180,13 +1180,13 @@ body[footer-visible="true"] .footer {
 }
 
 .videoplayer.on {
-  animation: 300ms cubic-bezier(0.23, 1, 0.32, 1) 0ms normal forwards 1 paused onBlink;
+  animation: 300ms cubic-bezier(0.23, 1, 0.32, 1) 0ms normal forwards 1 running onBlink;
   animation-play-state: running;
   display: block;
 }
 
 .videoplayer.off {
-  animation: 750ms cubic-bezier(0.23, 1, 0.32, 1) 0ms reverse forwards 1 paused offBlink;
+  animation: 750ms cubic-bezier(0.23, 1, 0.32, 1) 0ms reverse forwards 1 running offBlink;
   animation-play-state: running;
   animation-direction: normal;
   display: block;
@@ -1220,40 +1220,6 @@ body[footer-visible="true"] .footer {
   opacity: 0.2;
 }
 
-.glitch {
-  animation: 5s ease 2000ms normal none infinite running glitch;
-}
-
-@keyframes glitch {
-  30% {
-  }
-  40% {
-    opacity: 1;
-    transform: scale(1, 1);
-    filter: brightness(1);
-  }
-  41% {
-    filter: brightness(4);
-  }
-  42% {
-    opacity: 0.8;
-    transform: scale(1, 1.2);
-    filter: brightness(1);
-  }
-  42% {
-    opacity: 0.8;
-    transform: scale(1, 1.2);
-    transform: skew(-5deg, 0);
-  }
-  43% {
-    opacity: 1;
-    transform: scale(1, 1);
-    transform: skew(0, 0);
-  }
-  65% {
-  }
-}
-
 @keyframes on {
   0% {
     transform: scale(1, 0.3) translate3d(0, 0, 0);
@@ -1267,15 +1233,15 @@ body[footer-visible="true"] .footer {
   }
   9% {
     transform: scale(1.3, 0.6) translate3d(0, 100%, 0);
-    filter: brightness(40);
+    filter: brightness(2) blur(5px);
   }
   11% {
     transform: scale(1, 1) translate3d(0, 0, 0);
-    filter: brightness(1);
+    filter: brightness(1) blur(0px);
   }
   100% {
     transform: scale(1, 1) translate3d(0, 0, 0);
-    filter: brightness(1);
+    filter: brightness(1) blur(0px);
   }
 }
 
