--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,7 +42,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import "base/layout";
 
 // @import "elements/badge";
-// @import "elements/media";
+@import "elements/media";
 @import "elements/buttons";
 @import "elements/icons";
 
