--- a/src/scss/components/_screencontroller.scss
+++ b/src/scss/components/_screencontroller.scss
@@ -33,6 +33,7 @@ $rotate-value: 0;
   background-size: cover;
   width: 100%;
   max-width: 40vw;
+  -webkit-box-reflect:below 0px linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 20%,rgba(0,0,0,1) 208%);
   @include aspect-ratio(4, 3);
 
   @supports (aspect-ratio: 4 / 3) {
@@ -85,7 +86,7 @@ $rotate-value: 0;
   // @include break("md", "min") {
   // states
   &.on {
-    animation: 300ms $bezier 0ms normal forwards 1 running onBlink;
+    animation: 400ms $bezier 0ms normal forwards 1 running onBlink;
     animation-play-state: running;
     display: block;
   }
