--- a/src/scss/elements/_media.scss
+++ b/src/scss/elements/_media.scss
@@ -7,24 +7,56 @@
     width: 100%;
     height: 100%;
   }
+
+  &--corner {
+    border-radius: 1rem;
+  }
 }
 
-
 article img {
-  max-width: 80vw;;
+  max-width: 80vw;
 }
 
 .list--images {
   display: flex;
-  max-width: 100%;
   overflow: hidden;
   overflow-x: auto;
+  margin-left:  calc(var(--grid-gap) * -1);
+  padding-left: var(--grid-gap);
+  width: calc(100% + var(--grid-gap) + var(--grid-gap));
+  padding-bottom: $gutter--md;
+  padding-top: $gutter--md;
 
-  img, video {
+  img,
+  video {
     max-width: 100%;
+    min-width: 40vw;
   }
+
   & > * {
     margin-right: $gutter--md;
-    max-width: 100%;;
+    max-width: 100%;
   }
+
+  
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255,255,255,.5);
+  border-radius: 1rem;
+}
+
+.spotlight {
+  cursor: pointer;
+}
+
+figure {
+  margin: 0 0;
 }
