--- a/assets/style.css
+++ b/assets/style.css
@@ -911,6 +911,11 @@ article a:hover:before, article a.active:before {
   transform: scale3d(1, 1, 1);
 }
 
+@media print {
+  :root {
+    font-size: 12px;
+  }
+}
 html,
 body {
   height: 100%;
@@ -963,6 +968,48 @@ main {
   --space: 0px;
 }
 
+.d--print,
+.d--screen {
+  display: none;
+}
+
+@media print {
+  section {
+    page-break-before: always;
+  }
+}
+@media print {
+  body {
+    color: #151515;
+    background: inherit;
+  }
+  .list--images {
+    display: grid !important;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 1fr;
+    gap: 2rem;
+    display: none !important;
+  }
+  .list--images img {
+    max-height: 40vh;
+    object-fit: contain;
+    object-position: left;
+  }
+  .d--print {
+    display: inherit;
+  }
+  .d--none-print {
+    display: none;
+  }
+}
+@media screen {
+  .d--screen {
+    display: inherit;
+  }
+  .d--none-screen {
+    display: none;
+  }
+}
 .media--canvas {
   position: fixed;
   z-index: -1;
