update more shitty shop things

--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -80,7 +80,7 @@ main {
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: 1fr;
     gap: 2rem;
-    display: none !important;
+    // display: none !important;
   }
 
   .list--images img {
