--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -64,7 +64,7 @@ main {
 }
 
 @media print {
-  section {
+  .container--full {
     page-break-before: always;
   }
 }
@@ -77,14 +77,14 @@ main {
  
   .list--images {
     display: grid !important;
-    grid-template-columns: 1fr 1fr;
-    grid-auto-rows: 1fr;
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
     gap: 2rem;
     // display: none !important;
   }
 
   .list--images img {
-    max-height: 40vh;
+    max-height: 30vh;
     object-fit: contain;
     object-position: left;
   }
