--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -63,6 +63,10 @@ main {
   display: none;
 }
 
+.container--full + .container--full {
+  margin-top: 8rem;
+}
+
 @media print {
   .container--full {
     page-break-before: always;
